# generate-notes

./: LICENSE  README.md  chop-wav-to-mp3.py  chop-wav.py  generate-chimes-win-lose.py  generate-chimes.py  generate-midi.py  generate-mp3s-with-soundfont.py  generate-notes.py  play-midi-garage-band.py  play-mp3s.py  play-wavs.py  play.py  pyproject.toml
generated-midi/: 15_notes_c_major_scale.mid
sandbox/: aligned_sine.py  chop-mp3.py  generate-midi.py  generate-mp3s.py  play-midi-pygame.py  shephard-tone.py  simple_sine.py  verify-midi-duration.py
sandbox/generated-midi/: 15_notes_c_major_scale.mid
