[project]
name = "generate-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.2.post1",
    "mido>=1.3.3",
    "pydub>=0.25.1",
    "pyfluidsynth>=1.3.4",
    "pygame>=2.6.1",
    "python-rtmidi>=1.5.8",
]
